# AgentTrace

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  _context.py  _patch_registry.py  derive.py  diagnostics.py  pyproject.toml  review.py  runtime_hints.py  state.py  state_builder.py  trace_mapper.py  trace_schema.py
agenttrace/: __init__.py  classify.py  models.py
agenttrace/ingest/: __init__.py  server.py
agenttrace/metrics/: comparison.py  regression.py
agenttrace/reporters/: csv_reporter.py
cli/: main.py
collectors/: runtime.py
dashboard/: index.html  server.py  store.py
docs/: agenttrace-go-adapter-v0.md  agenttrace-go-api-sketch.md  protocol-v0.1.md
integrations/claude_code/: __init__.py  hook_server.py
integrations/generic/: __init__.py  auto_patch.py  patcher.py  wrappers.py
integrations/langchain/: callback.py
integrations/openai_agents/: tracer.py
metrics/: engine.py
reporters/: json_reporter.py
sdk/go/agenttracego/: README.md  attach.go  config.go  emitter.go  go.mod  runscope.go
