[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrace-runtime"
version = "0.1.0"
description = "Open-source runtime tracing and diagnostics for AI agent execution flows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "happli-sys" }
]
keywords = ["ai", "agent", "tracing", "observability", "runtime", "diagnostics", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
openai-agents = ["openai-agents>=0.0.3"]
crewai = ["crewai>=0.1"]
dev = ["pytest>=7", "pytest-asyncio", "black", "ruff", "build", "twine"]

[project.scripts]
agenttrace = "agenttrace.cli.main:main"

[project.urls]
Homepage = "https://github.com/happli-sys/AgentTrace"
Issues = "https://github.com/happli-sys/AgentTrace/issues"
Repository = "https://github.com/happli-sys/AgentTrace"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenttrace*"]

[tool.setuptools.package-data]
agenttrace = ["dashboard/*.html"]
